Fixed vertical window shrinking overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,8 +18,7 @@ body {
     flex-direction: column;
     height: 100vh;
     color: var(--text-color);
-    background-size: cover;
-    overflow: hidden;
+    background-size:auto;
 }
 
 .topBar {
